force-app/main/default/objects/Business_Summary__c/Business_Summary__c.object-meta.xml
<CustomObject>
    <label>Business Summary</label>
    <nameField>
        <label>Business Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>