force-app/main/default/objects/Business_Summary__c/fields/Available_Funds__c.field-meta.xml
<CustomField>
    <fullName>Available_Funds__c</fullName>
    <formula>Total_Collected__c - Total_Mfr_Paid__c - Total_Expenses__c - Total_Withdrawn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>