force-app/main/default/objects/Business_Summary__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>Set by trigger on every change</description>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>