force-app/main/default/objects/Business_Summary__c/fields/Total_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Collected__c</fullName>
    <description>Trigger adds every client payment</description>
    <label>Total Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>