force-app/main/default/objects/Business_Summary__c/fields/Total_Mfr_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Mfr_Paid__c</fullName>
    <description>Trigger adds every manufacturer payment</description>
    <label>Total Mfr Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>