force-app/main/default/objects/Business_Summary__c/fields/Total_Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Total_Withdrawn__c</fullName>
    <label>Total Withdrawn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>